# APC524FinalProject

./: .pre-commit-config.yaml  GUI.ipynb  README.md  Run Python Scipt.bat  Untitled.ipynb  avionics.py  control.py  controlV2.py  dynamics.ipynb  dynamics.py  environment.yml  getcontrols.ipynb  horizon.py  introScreenGUI.ipynb  mainCode.ipynb  nox.py  parameterCalc.ipynb  parameterCalc.py  plotter2D.ipynb  plotter2D.py  plotter3D.ipynb  plotter3D.py  prob3b.py  pyproject.toml  testControl.py  test_dynamics.ipynb  test_parameterCalc.ipynb
.github/workflows/: ci.yml  wheels.yml
ipynb/: dynamics.ipynb  gameover.ipynb  getcontrols.ipynb  introScreenGUI.ipynb  mainCode.ipynb  parameterCalc.ipynb  plotter2D.ipynb  plotter3D.ipynb
run/: control.py  dynamics.py  gameover.py  introScreen.py  parameterCalc.py  plotter2D.py
run/cffi-1.15.1.dist-info/: RECORD  direct_url.json
run/cryptography-37.0.4.dist-info/: RECORD  direct_url.json
run/gevent-22.10.2.dist-info/: RECORD
run/greenlet-2.0.1.dist-info/: RECORD
run/importlib_metadata-4.11.4.dist-info/: RECORD  direct_url.json
run/jsonschema-4.16.0.dist-info/: RECORD  direct_url.json
run/nbformat-5.6.1.dist-info/: RECORD  direct_url.json
run/zope.interface-5.5.2.dist-info/: RECORD
scripts/: main_gui.py  plotter3D.py
src/: control.py  controlV2.py  environment.yml  main_gui.py  parameterCalc.py  plotter3D.py  run.ipynb  run.py
tests/: control.py  test_control.ipynb  test_control.py  test_controlV2.ipynb  test_controlV2.py  test_dynamics.ipynb  test_dynamics.py  test_parameterCalc.ipynb  test_parameterCalc.py
