[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight_simulator"
authors = [
    {name = "Yousuf Tariq-Shuaib", email="symit@princeton.edu"},
    {name = "Thomas van Liere", email = "tliere@princeton.edu"}
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest >= 6.0.0",
  "uncertainties >= 3.1.7"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
